added messageContext method argument resolver